# jdwpy

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  shell.nix
.agents/: AGENTS.md
.github/workflows/: ci.yml
examples/: breakpoint_example.py  get_version.py
scripts/: run_jdb_session.py
src/jdwpy/: __init__.py  connection.py  constants.py  exceptions.py  io.py  packet.py  proxy.py  spec.py  testing.py
src/jdwpy/commands/: __init__.py  array_reference.py  array_type.py  base.py  class_loader_reference.py  class_object_reference.py  class_type.py  event.py  event_request.py  interface_type.py  method.py  object_reference.py  reference_type.py  registry.py  stack_frame.py  string_reference.py  thread_group_reference.py  thread_reference.py  vm.py
tests/: __init__.py  protocol_helpers.py  test_integration.py  test_io.py  test_protocol.py  test_protocol_core.py
tests/commands/: __init__.py  test_events.py  test_members.py  test_objects.py  test_threads.py  test_types.py  test_vm.py
tests/testdata/: SimpleApp.java
