[project]
name = "jdwpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michal Gregorczyk", email = "michalgr@live.com" }
]
requires-python = ">=3.14"
dependencies = []

[tool.pyrefly]
project-includes = [
    "src/**/*.py",
    "examples/**/*.py",
]


[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff",
    "pyrefly>=1.0.0",
]
